remove modern Math dep